<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    app:cardCornerRadius="15dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius = "4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            android:transitionName="image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic">

        </ImageView>

        <TextView
            android:id="@+id/namePerson"
            android:layout_width="wrap_content"
            android:layout_height="31sp"
            android:ellipsize="end"
            android:gravity="center_vertical|left"
            android:textColor="#5E5E5E"
            android:textSize="20sp"
            android:transitionName="name"
            app:layout_constraintStart_toStartOf="@+id/photo"
            app:layout_constraintTop_toBottomOf="@+id/photo"
            tools:ignore="RtlHardcoded"
            tools:text="@string/nameuser" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:gravity="start"
            android:text="@string/description"
            android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
</LinearLayout>