<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".upload_story.UploadStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/previewImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:minHeight="240dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.149"
                app:srcCompat="@drawable/ic_place_holder" />

            <Button
                android:id="@+id/cameraButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/camera"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="@+id/previewImageView"
                app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

            <Button
                android:id="@+id/galleryButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/green"
                android:elevation="2dp"
                android:fontFamily="@font/poppins_semibold"
                android:scaleType="fitCenter"
                android:text="@string/gallery"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="@+id/previewImageView"
                app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_desc"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:alpha="0"
                app:layout_constraintBottom_toTopOf="@+id/uploadButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:alpha="100">

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_desc" />

            <TextView
                android:id="@+id/tv_shareloc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/share_loc"
                app:layout_constraintBottom_toBottomOf="@+id/sw_location"
                app:layout_constraintStart_toEndOf="@+id/sw_location"
                app:layout_constraintTop_toTopOf="@+id/sw_location" />

            <TextView
                android:id="@+id/tv_Loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/uploadButton"
                app:layout_constraintStart_toEndOf="@+id/tv_shareloc"
                app:layout_constraintTop_toBottomOf="@+id/tf_desc" />

            <Button
                android:id="@+id/uploadButton"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/upload"
                android:textSize="16dp"
                android:layout_marginTop="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_desc" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_desc"
                android:layout_width="365dp"
                android:layout_height="160dp"
                android:layout_margin="25dp"
                android:gravity="top|start"
                android:hint="Description"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="5"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="@+id/cameraButton"
                app:layout_constraintStart_toStartOf="@+id/galleryButton"
                app:layout_constraintTop_toBottomOf="@+id/galleryButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>